--- a/Curs01/Ex07/index.html
+++ b/Curs01/Ex07/index.html
@@ -16,6 +16,41 @@
 </head>
 
 <body>
+  <h1>The Internet</h1>
+
+  <h2>Google</h2>
+  <h3>Details</h3>
+  <p>
+    Google LLC is an American... , Apple and Facebook.
+  </p>
+  <h3>Links</h3>
+  <p>
+    <a
+      href="https://en.wikipedia.org/wiki/Google"
+      target="_blank"
+      rel="noopener noreferrer"
+      title="Google"
+    >https://en.wikipedia.org/wiki/Google</a> <br>
+
+    <a
+      href="http://www.google.com"
+      target="_blank"
+      rel="noopener noreferrer"
+      title="Google"
+    >https://www.google.com</a>
+  </p>
+
+  <h2>Twitter</h2>
+  <h3>Details</h3>
+  <h3>Links</h3>
+  <p>
+    <a
+      href="http://en.wikipedia.org/wiki/Twitter"
+      target="_blank"
+      rel="noopener noreferrer"
+      title="Twitter"
+    >http://en.wikipedia.org/wiki/Twitter</a>
+  </p>
 
 
   <div
@@ -23,6 +58,7 @@
     id="html01-01-07"
   ></div>
   <script src="https://pixellab.ro/js/pixeltab/static/js/pixeltab.js"></script>
+
 </body>
 
 </html>
