--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -8,11 +8,19 @@
     content="width=device-width, initial-scale=1.0"
   >
   <title>Anchors</title>
+
+  <link
+    rel="stylesheet"
+    href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css">
 </head>
 
 <body>
-<a href="http://" target="_blank" rel="noopener noreferrer"></a>
-
+  <a 
+   href="https://google.com"
+   title="Click aici pentru a naviga spre Google">google</a>
+  
+<a href="http://yahoo.com" target="_blank" rel="noopener noreferrer">
+  
   <div
     class="pixeltab-host"
     id="html01-01-03"
