--- a/Curs01/Ex04/index.html
+++ b/Curs01/Ex04/index.html
@@ -16,7 +16,12 @@
 </head>
 
 <body>
-  <p>
+   <a href="#last"title="Ultimul paragraf"
+   >Ultimul paragraf</a>
+   <a href="#middle"
+   title="Paragraful din mijloc"
+   >Paragraful din mijloc</a>
+  <p id="first">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
     aliqua. Netus et malesuada fames ac turpis. Eget nulla facilisi etiam dignissim. Purus semper eget duis at tellus
     at. Sit amet aliquam id diam maecenas. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Ut eu sem
@@ -200,7 +205,7 @@
   <br>
 
 
-  <p>
+  <p id="middle">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
     aliqua. Netus et malesuada fames ac turpis. Eget nulla facilisi etiam dignissim. Purus semper eget duis at tellus
     at. Sit amet aliquam id diam maecenas. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Ut eu sem
@@ -361,7 +366,9 @@
     egestas dui id. Habitasse platea dictumst quisque sagittis purus sit amet. Sit amet massa vitae tortor condimentum
     lacinia. At ultrices mi tempus imperdiet nulla.
   </p>
-  <p>
+  <p id="next-to-last"
+  title="Penultimul paragraf"
+  >Penultimul paragraf</a>
     Vulputate sapien nec sagittis aliquam malesuada. Dui accumsan sit amet nulla facilisi morbi tempus iaculis urna.
     Urna et pharetra pharetra massa massa ultricies mi quis. Ac tincidunt vitae semper quis lectus nulla at volutpat.
     Leo urna molestie at elementum eu. Dapibus ultrices in iaculis nunc sed. Congue eu consequat ac felis donec et odio.
@@ -372,14 +379,20 @@
     donec. Tellus rutrum tellus pellentesque eu. Amet nulla facilisi morbi tempus iaculis urna. Augue mauris augue neque
     gravida in fermentum et.
   </p>
-  <p>
+  <p id="last">
     Quam lacus suspendisse faucibus interdum posuere lorem. Vitae justo eget magna fermentum iaculis eu non. Vel turpis
     nunc eget lorem dolor sed viverra ipsum. Dolor sit amet consectetur adipiscing elit. Tristique senectus et netus et
     malesuada. Lacinia quis vel eros donec ac odio. Velit dignissim sodales ut eu. Sed turpis tincidunt id aliquet risus
     feugiat. Blandit massa enim nec dui nunc mattis. Nullam eget felis eget nunc lobortis mattis aliquam. Magna
     fringilla urna porttitor rhoncus dolor purus.
   </p>
+<a 
+href="#first" 
+title="Back to top"
+>Back to top</a>
 
+
+   
   <div
     class="pixeltab-host"
     id="html01-01-04"
