--- a/Curs01/Ex06/index.html
+++ b/Curs01/Ex06/index.html
@@ -16,8 +16,48 @@
 </head>
 
 <body>
+  <h1>Titlul meu</h1>
 
+  <h2>Google</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Netus et malesuada fames ac turpis. Eget nulla facilisi etiam dignissim. Purus semper eget duis at tellus
+    at. Sit amet aliquam id diam maecenas. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Ut eu sem
+    integer vitae justo eget magna fermentum iaculis. Sit amet facilisis magna etiam tempor orci eu. Aliquet sagittis id
+    consectetur purus ut faucibus pulvinar elementum integer. Amet est placerat in egestas erat. Viverra aliquet eget
+    sit amet. A lacus vestibulum sed arcu non odio euismod lacinia at. Risus in hendrerit gravida rutrum quisque non
+    tellus orci. Donec adipiscing tristique risus nec feugiat in fermentum posuere urna. Congue nisi vitae suscipit
+    tellus mauris a diam. Gravida in fermentum et sollicitudin ac.
+  </p>
+  <p>
+    <a
+      href="http://google.com"
+      target="_blank"
+      rel="noopener noreferrer"
+      title="Google"
+    >Google</a>
+  </p>
+  <h2>Twitter</h2>
+  <p>
+    Twitter ......twitter
+  </p>
+  <a
+    href="http://Twitter.com"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Twitter</a>
+  <p>
 
+    twitter twitter twitter
+  </p>
+  <a
+    href="http://Twitter.com"
+    target="_blank"
+    rel="noopener noreferrer"
+    title="Twitter"
+  >Twitter</a>
+  <p>
+    twitter twitter twitter
+  </p>
   <div
     class="pixeltab-host"
     id="html01-01-06"
