--- a/Curs02/Ex01/index.html
+++ b/Curs02/Ex01/index.html
@@ -16,6 +16,27 @@
 </head>
 
 <body>
+  <img
+    src="https://via.placeholder.com/300/400"
+    alt="Imaginea mea"
+  >
+
+  <img
+    src="https://via.placeholder.com/300/400 "
+    alt="Imaginea mea"
+  >
+
+  <img
+    src="https://via.placeholder.com/300/400 "
+    alt="Imaginea mea"
+  >
+
+  <img
+    src="https://via.placeholder.com/300/400"
+    alt="altul updatat"
+  >
+
+
 
 
   <div
